Cleaned swagger page
