# api/openapi-v3.json
@@ -112,201 +112,6 @@
         },
         "summary": "Lists objects",
         "tags": ["api"]
-      },
-      "post": {
-        "description": "Adds a new object to a file store.",
-        "operationId": "addObject",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Object"
-              }
-            }
-          },
-          "description": "Object that needs to be added to the file store.",
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Object"
-                }
-              }
-            },
-            "description": "OK"
-          },
-          "400": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorContainer"
-                }
-              }
-            },
-            "description": "Bad Request"
-          }
-        },
-        "summary": "Adds object",
-        "tags": ["api"]
-      }
-    },
-    "/objects/{objectName}": {
-      "delete": {
-        "description": "Deletes the object with the provided ID",
-        "operationId": "deleteObject",
-        "parameters": [
-          {
-            "description": "ID of the object to delete",
-            "in": "path",
-            "name": "objectName",
-            "required": true,
-            "schema": {
-              "format": "uuid",
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "OK"
-          },
-          "400": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorContainer"
-                }
-              }
-            },
-            "description": "Bad Request"
-          },
-          "404": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorContainer"
-                }
-              }
-            },
-            "description": "Not found"
-          }
-        },
-        "summary": "Deletes object",
-        "tags": ["api"]
-      },
-      "get": {
-        "description": "Returns a single object entry with the provided ID.",
-        "operationId": "getObjectById",
-        "parameters": [
-          {
-            "description": "ID of the object to return",
-            "in": "path",
-            "name": "objectName",
-            "required": true,
-            "schema": {
-              "format": "uuid",
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Object"
-                }
-              }
-            },
-            "description": "OK"
-          },
-          "400": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorContainer"
-                }
-              }
-            },
-            "description": "Bad Request"
-          },
-          "404": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorContainer"
-                }
-              }
-            },
-            "description": "Not found"
-          }
-        },
-        "summary": "Retrieves object by ID",
-        "tags": ["api"]
-      },
-      "patch": {
-        "description": "Updates an object in the file store. Accepts a partial object.",
-        "operationId": "updateObject",
-        "parameters": [
-          {
-            "description": "ID of object to update",
-            "in": "path",
-            "name": "objectName",
-            "required": true,
-            "schema": {
-              "format": "uuid",
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/Object"
-              }
-            }
-          },
-          "description": "Object that needs to be added to the file store.",
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Object"
-                }
-              }
-            },
-            "description": "OK"
-          },
-          "400": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorContainer"
-                }
-              }
-            },
-            "description": "Bad Request"
-          },
-          "404": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorContainer"
-                }
-              }
-            },
-            "description": "Not found"
-          }
-        },
-        "summary": "Updates object",
-        "tags": ["api"]
       }
     }
   }
